--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>???吃蝦米???</h1>
+<select> 
+  <option>蝦子</option>
+  <option>白米</option> 
+</select>
