--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<head>
+  <title>Welcome Idiot</title>
+ <style>
+   h1{color:red}
+ </style> 
+</head>
+<body>
 <h1>???吃蝦米???</h1>
 <select> 
   <option>蝦子</option>
   <option>白米</option> 
 </select>
+</body>
