--- a/index.html
+++ b/index.html
@@ -10,4 +10,10 @@
   <option>蝦子</option>
   <option>白米</option> 
 </select>
+<form>
+ 時間都去哪兒了<br>
+ <input type="checkbox" value="1" name="afternoon">愛福特努
+ <input type="checkbox" value="2" name="night">奈特 
+</form>
+  
 </body>
