--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 </head>
 <body>
 <h1>???吃蝦米???</h1>
-<select> 
+
+<form action="action_page.php" method="get">
+  <select> 
   <option>蝦子</option>
   <option>白米</option> 
-</select>
-<form>
+  </select>
  時間都去哪兒了<br>
  <input type="checkbox" value="1" name="afternoon">愛福特努
- <input type="checkbox" value="2" name="night">奈特 
+ <input type="checkbox" value="2" name="night">奈特
+  <br><br>
+ <input type="submit" value="submit">
 </form>
   
 </body>
