--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>???吃蝦米???</h1>
 
-<form action="action_page.php" method="get">
+<form action="eat.php" method="get">
   <select> 
   <option>蝦子</option>
   <option>白米</option> 
