--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <h1>???吃蝦米???</h1>
 
 <form action="eat.php" method="get">
-  <select> 
-  <option>蝦子</option>
-  <option>白米</option> 
+  <select name="food"> 
+  <option value="s">蝦子</option>
+  <option value="r">白米</option> 
   </select>
   <br><br>
  時間都去哪兒了<br>
