--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </select>
   <br><br>
  時間都去哪兒了<br>
- <input type="checkbox" value="1" name="afternoon">愛福特努
- <input type="checkbox" value="2" name="night">奈特
+ <input type="checkbox" value="1" name="time[]">愛福特努
+ <input type="checkbox" value="2" name="time[]">奈特
   <br><br>
  <input type="submit" value="submit">
 </form>
