--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>???吃蝦米???</h1>
 
-<form action="eat.php" method="get">
+<form action="" method="get">
   <select name="food"> 
   <option value="s">蝦子</option>
   <option value="r">白米</option> 
